# mainstage-forge

./: .gitignore  README.md  pyproject.toml
mainstage_forge/: Master.cst  Metronome.cst  Output 1-2.cst  __init__.py  cst_tools.py  models.py  plist_builder.py  server.py  smart_controls.py  writer.py
mainstage_forge/templates/: 80s FM Bass Attack.cst  80s Sync Lead.cst  Alone.cst  Analog Spheres.cst  B-3 V2.cst  Bass.cst  Bebop Organ.cst  Classic Electric Piano.cst  D50 Pad.cst  DX7 V.cst  Grand Piano.cst  Jun-6 V.cst  Jup-8 V4.cst  OB-Xa V.cst  OP-Xa V.cst  Oakland Organ.cst  Piano V3.cst  Stage-73 V2.cst
mainstage_forge/workspace.layout/: setupZ.layout
mainstage_forge/workspace_smart.layout/: setupZ.layout
tests/: test_cst_tools.py  test_writer.py
